@@ -13,6 +13,8 @@
    beginning and end revision ids of uncommitted chain of revisions
    in addition to old tip revision message and bug ids. All data saved
    as dictionary in "commit_data" section of branch.conf.
+ * qmerge now supports forced merging and merging of uncommitted changes.
+   (#400062, #409865)
 
 
 0.13.1 - 2009-08-11
